# platform.tools.netsim

./: .clang-format  .gitignore  Android.bp  CMakeLists.txt  OWNERS  TEST_MAPPING
pdl/: arp.pdl  (+5 more)
rust/: CMakeLists.txt  Cargo.toml  main.cc  netsimd.cc
rust/backend-cxx/: CMakeLists.txt  Cargo.toml  cxxbridge.sh
rust/backend-cxx/src/: lib.rs
rust/backend-proto/: CMakeLists.txt  Cargo.toml  build_cargo.rs
rust/backend-proto/src/: hci_packet.rs  lib.rs  mod.rs  packet_streamer.rs  startup.rs
rust/capture/: Cargo.toml
rust/capture/src/: lib.rs  pcap.rs
rust/capture/tests/: integration_test.rs
rust/cli/: Cargo.toml
rust/cli/src/: args.rs  capture_handler.rs  display.rs  ffi.rs  file_handler.rs  grpc_client.rs  lib.rs  requests.rs  response.rs
rust/common/: Cargo.toml
rust/common/src/: lib.rs
rust/daemon/: Cargo.toml  build.rs
rust/daemon/src/: args.rs  config.rs  events.rs  ffi.rs  lib.rs  ranging.rs  resource.rs  rust_main.rs  service.rs  session.rs  util.rs  version.rs
rust/daemon/tests/: integration_test.rs
rust/frontend/: Cargo.toml
rust/frontend-client-cxx/: CMakeLists.txt  Cargo.toml  build_cargo.rs  cxxbridge.sh
rust/frontend-client-cxx/cxx/: frontend_client_cxx_generated.cc  frontend_client_cxx_generated.h
rust/frontend-client-cxx/src/: lib.rs
rust/frontend-proto/: CMakeLists.txt  Cargo.toml  build_cargo.rs
rust/frontend-proto/src/: common.rs  frontend.rs  lib.rs  mod.rs  model.rs
rust/frontend/src/: netsim_test_client.rs  netsim_test_server.rs
rust/hostapd-rs/: Cargo.toml  build.rs  build_cargo.rs
rust/hostapd-rs/bindings/: wrapper.h
rust/hostapd-rs/src/: hostapd.rs  lib.rs
rust/hostapd-rs/tests/: integration_test.rs
rust/http-proxy/: Cargo.toml
rust/http-proxy/benches/: dns_benchmark.rs
rust/http-proxy/src/: connector.rs  dns.rs  dns_manager.rs  error.rs  lib.rs  manager.rs  pattern_vec.rs  rewriter.rs  util.rs
rust/http-proxy/tests/: integration_test.rs
rust/http-server/: CMakeLists.txt  Cargo.toml
rust/http-server/src/: lib.rs  main.rs
rust/libslirp-rs/: Cargo.toml  build.rs  build_cargo.rs
rust/libslirp-rs/bindings/: wrapper.h
rust/libslirp-rs/src/: lib.rs  libslirp.rs  libslirp_config.rs
rust/libslirp-rs/tests/: integration_test.rs  integration_udp.rs
rust/model/: Cargo.toml
rust/model/src/: position.rs
rust/netsim-cli/: CMakeLists.txt  Cargo.toml  netsim-cli.md
rust/netsim-cli/src/: args.rs  browser.rs  display.rs  lib.rs  main.rs  pcap_handler.rs  requests.rs  response.rs
rust/netsim-common/: Cargo.toml
rust/netsim-common/src/: lib.rs
rust/netsim-cxx/: CMakeLists.txt  Cargo.toml  Cargo.toml.cf  build.rs  build_cargo.rs  cxxbridge.sh
rust/netsim-cxx/cxx/: netsim_cxx_generated.cc  netsim_cxx_generated.h
rust/netsim-cxx/src/: 404.html  args.rs  events.rs  frontend_http_server.rs  http_server.rs  lib.rs  ranging.rs  resource.rs  rust_main.rs  util.rs  version.rs
rust/packets/: Cargo.toml  build.rs
rust/packets/src/: ieee80211.rs  lib.rs
rust/proto/: Cargo.toml  build_cargo.rs
rust/proto/src/: common.rs  config.rs  configuration.rs  frontend.rs  frontend_grpc.rs  hci_packet.rs  lib.rs  model.rs  packet_streamer.rs  packet_streamer_grpc.rs  startup.rs  stats.rs
rust/ranging/: CMakeLists.txt  Cargo.toml
rust/ranging/cxx/: libranging_cxx_generated.cc  libranging_cxx_generated.h
src/: CMakeLists.txt  netsim-packet-streamer-client.cc  netsim.cc  netsimd.cc
src/backend/: CMakeLists.txt  backend_packet_hub.h  backend_server.cc  backend_server.h  backend_server_hci_transport.cc  backend_server_hci_transport.h  fd_server.cc  fd_startup.cc  grpc_client.cc  grpc_client.h  grpc_server.cc  grpc_server.h  packet_streamer_client.cc  packet_streamer_client.h  packet_streamer_client_test.cc  rpc_hal_transport.cc  rpc_hal_transport.h  rpc_transport.cc  startup_test.cc
src/controller/: CMakeLists.txt  chip.cc  chip.h  controller.cc  controller.h  device.cc  device.h  device_notify_manager.cc  device_notify_manager.h  device_test.cc  scene_controller.cc  scene_controller.h  scene_controller_test.cc
src/core/: CMakeLists.txt  server.cc  server.h  server_rpc.cc  server_rpc.h
src/fe/: CMakeLists.txt  cli.cc  cli.h  frontend_server.cc  frontend_server_test.cc  http_server.cc
src/frontend/: CMakeLists.txt  cli.cc  frontend_client.cc  frontend_client.h  frontend_client_stub.cc  frontend_client_stub.h  frontend_server.cc  frontend_server.h  frontend_server_test.cc  http_server.cc  http_server.h  server_response_writable.cc  server_response_writable.h
src/hci/: CMakeLists.txt  bluetooth_chip_emulator.cc  bluetooth_chip_emulator.h  bluetooth_facade.cc  bluetooth_facade.h  fd_startup.cc  fd_startup.h  hci_chip_emulator.cc  hci_chip_emulator.h  hci_debug.cc  hci_debug.h  hci_packet.h  hci_packet_hub.h  hci_packet_transport.cc  hci_packet_transport.h  rpc_hal_transport.cc  rpc_hal_transport.h  rpc_hci_forwarder.cc  rpc_hci_forwarder.h  rpc_transport.h  rust_device.cc  rust_device.h
src/packet_hub/: CMakeLists.txt  packet_hub.cc  packet_hub.h
src/proto/: Android.bp  CMakeLists.txt  common.proto  emulated_bluetooth_vhci.proto  frontend.proto  hci_packet.proto  internal.proto  model.proto  packet_streamer.proto  startup.proto
src/util/: Android.bp  CMakeLists.txt  crash_report.cc  ini_file.cc  ini_file.h  ini_file_test.cc  log.cc  log.h  os_utils.cc  os_utils.h  os_utils_test.cc  ranging.cc  ranging.h  string_utils.cc  string_utils.h  string_utils_test.cc
src/uwb/: uwb_facade.cc  uwb_facade.h  uwb_packet_hub.h
src/wifi/: CMakeLists.txt  wifi_facade.cc  wifi_facade.h  wifi_facade_test.cc  wifi_packet_hub.cc  wifi_packet_hub.h
ui/: .gitignore  Android.bp  CMakeLists.txt  README.md  package.json  rollup.config.js  rollup.config.mjs  tsconfig.json  web-dev-server.config.mjs
ui/ts/: common.ts  cube-sprite.ts  customize-map-button.ts  device-dragzone.ts  device-dropzone.ts  device-info.ts  device-list.ts  device-map.ts  device-observer.ts  license-info.ts  model.ts  navigation-bar.ts  netsim-app.ts  package.json  packet-info.ts  pyramid-sprite.ts
ui/web/: dev.html  index.html  packet.html
(+264 files in other folders)
