[package]
version = "0.1.0"
edition = "2021"
name = "frontend-proto"
# build = "build_cargo.rs"

[dependencies]
protobuf = {version = "2.27.1", features = [ "with-serde" ] }
serde = "1.0"

[build-dependencies]
protobuf = {version = "2.27.1", features = [ "with-serde" ] }
protoc-rust = "2.27"
protobuf-codegen = "2.27"

[lib]
path = "src/lib.rs"
crate-type = ["staticlib","lib"]
doctest = false

[features]
default = ["with-serde"]
with-serde = ["protobuf/with-serde"]
