[package]
version = "0.1.0"
edition = "2021"
name = "frontend-proto"
# build = "build_cargo.rs"

[dependencies]
protobuf = "=3.2.0"

[build-dependencies]
# protobuf = "=3.2.0"
# protoc-rust = "2.27"
# protobuf-codegen = "3.2.0"

[lib]
path = "src/lib.rs"
crate-type = ["staticlib","lib"]
doctest = false
