# Copyright 2024 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "http-proxy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "lib"]
path = "src/lib.rs"
doctest = false

[dependencies]
regex = "1.6.0"
httparse = "1.8.0"
libslirp-rs = { path = "../libslirp-rs" }
log = "0.4.17"
